# project-takoyaki-botnet

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
project-takoyaki-cli/: Cargo.toml
project-takoyaki-keygen/: Cargo.toml
project-takoyaki-keygen/src/: main.rs
project-takoyaki-peer/: Cargo.toml  build.rs
project-takoyaki-peer/assets/: dilithium-private-key  dilithium-public-key  network-name  storage-encryption-key  swarm-preshared-key
project-takoyaki-peer/source/: main.rs  node.rs
project-takoyaki-peer/src/: config.rs  main.rs  node.rs  payload.rs  storage.rs  vault.rs
project-takoyaki-peer/src/peer/: behavior.rs  behaviour.rs  cli.rs  events.rs  mod.rs  swarm.rs
project-takoyaki-peer/src/peer/commands/: lua.rs  mod.rs
project-takoyaki-scanner/: Cargo.toml
