[package]
name = "project-takoyaki-peer"
version = "0.1.0"
edition = "2021"
license = "BSD-3"

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.54.1", features = ["autonat", "dns", "gossipsub", "identify", "kad", "macros", "noise", "pnet", "tcp", "tokio", "upnp", "yamux"] }
log = "0.4.22"
obfstr = "0.4.4"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
