[package]
name = "project-takoyaki-peer"
version = "0.1.0"
edition = "2021"
license = "BSD-3"

[dependencies]
aes-gcm = "0.10.3"
futures = "0.3.30"
libp2p = { version = "0.54.1", features = ["autonat", "dns", "gossipsub", "identify", "kad", "macros", "noise", "pnet", "tcp", "tokio", "upnp", "yamux"] }
log = "0.4.22"
obfstr = "0.4.4"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.8.19"
